added new background image and resume

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <h2 class="text-center text">I've got a work long history.</h2>
                 </div>
                 <div class="margin">
-                    <img class="img-responsive col-md-8 col-sm-12 col-xs-12 col-md-offset-2" src="resume/Screen%20Shot%202016-07-11%20at%202.21.04%20PM.png" alt="">
+                    <img class="img-responsive col-md-8 col-sm-12 col-xs-12 col-md-offset-2" src="resume/Andre-Burke-Resume.pdf" alt="">
                 </div>
             </div>
         </section>
@@ -204,8 +204,9 @@
                 </div>
                 <div class="col-md-7 col-md-offset-1 margin">
                     <h4 class="margin text">What sparked my interest in coding was my love for technology. For several years now I've been an actively involved tech enthusiast.
-                    it started with smartphones. My very first smartphone was the iPhone 3GS, it was my first step into the newly arisen smartphone revolution
-                        after doing hours of research I decided to make the switch to Android.
+                    it started with smartphones. My very first smartphone was the iPhone 3GS, it was my first step into the newly arisen smartphone revolution. 
+                    It was a great smartphone, but not long after I decided that my real interests were in top tier specs and hardware. Android became my new 
+                    platform of choice.
                     </h4>
                     <br>
                     <h4 class="text">I've been using an Android device ever since. Not long after I began to develop 
