--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <h2 class="text-center text">I've got a work long history.</h2>
                 </div>
                 <div class="margin">
-                    <img class="img-responsive col-md-8 col-sm-12 col-xs-12 col-md-offset-2" src="resume/Andre-Burke-Resume.pdf" alt="">
+                    <img class="img-responsive col-md-8 col-sm-12 col-xs-12 col-md-offset-2" src="resume/Andre-Burke-Resume.jpg" alt="">
                 </div>
             </div>
         </section>
