--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="row main-margin">
                 <div class="welcome-img">
                     <h1 class="text-center welcome">Andre Burke</h1>
-                    <h1 class="text-center black">Web Developer</h1>
+                    <h1 class="text-center white">Web Developer</h1>
                     <h1 class="text-center icon-style">
                         <a href="https://www.linkedin.com/in/aburkex24" target="_blank"><i class="fa fa-linkedin"></i></a>
                         <a href="https://github.com/aburkex24" target="_blank"><i class="fa fa-github"></i></a>
