--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
         </section>
 
-        <section class="container">
+        <section class="container resume">
             <div class="row">
                 <div id="resume"></div>
                 <div>
