--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <div class="margin">
                     <img class="img-responsive col-md-8 col-sm-12 col-xs-12 col-md-offset-2" src="resume/Andre-Burke-Resume.jpg" alt="">
                 </div>
-                <div class="added-margin"></div>
+                <div class="resume-margin"></div>
             </div>
         </section>
 
