--- a/index.html
+++ b/index.html
@@ -133,11 +133,10 @@
                 <div class="margin">
                     <img class="img-responsive col-md-8 col-sm-12 col-xs-12 col-md-offset-2" src="resume/Andre-Burke-Resume.jpg" alt="">
                 </div>
-                <div class="resume-margin"></div>
             </div>
         </section>
 
-        <section class="container">
+        <section class="container resume-margin">
             <div class="row">
                 <div id="portfolio"></div>
                 <div>
