--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
                     <h2 class="text-center text">I've got a work long history.</h2>
                 </div>
                 <div class="margin">
-                    <img class="img-responsive col-md-8 col-sm-12 col-xs-12 col-md-offset-2" src="resume/Andre-Burke-Resume.jpg" alt="">
+                    <img class="img-responsive resume-margin col-md-8 col-sm-12 col-xs-12 col-md-offset-2" src="resume/Andre-Burke-Resume.jpg" alt="">
                 </div>
             </div>
         </section>
 
-        <section class="container resume-margin">
+        <section class="container">
             <div class="row">
                 <div id="portfolio"></div>
                 <div>
