--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row" style="margin-bottom: 100px;">
                 <div class="col-md-4">
                     <img class="center-block skill-set img-responsive" src="icons/express.png" alt="">
                     <h3 class="text-center">ExpressJs</h3>
